test-cases/final-dump/resource_error2.wybe
pub def resource_error {
    ! println("shouldn't work: no use !io")
}

pub def should_be_ok use !io {
    ! should_be_ok2
}

pub def should_be_ok2 use !io {
    ! println("should work")
}


use res_decl

pub def missing_resource {
    ! use_resource
}

pub def use_resource use !count {
    incr(!count)
}

pub def bad_special_use use !io {
    !println(call_source_file_name)
}
